# mathematics

./: pyproject.toml
src/group_theory/: additive_modulo_group.py  group.py  multiplicative_modulo_group.py
src/number_theory/: basic.py  greatest_common_divisor.py  prime_factors.py
src/tests/group_theory/: test_additive_modulo_group.py  test_multiplicative_modulo_group.py
src/tests/number_theory/: test_basic.py  test_prime_factors.py
